fix  overflow

--- a/css/media.css
+++ b/css/media.css
@@ -60,7 +60,7 @@
     font-size: 16px;
     line-height: 1.5em;
     letter-spacing: 0.02em;
-    color: var(--color-navy-blue);
+    color: var(--color-grey);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
@@ -96,7 +96,7 @@
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-    color: var(--color-slate);
+    color: var(--address-title-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
@@ -296,7 +296,7 @@
     font-size: 16px;
     line-height: 1.5em;
     letter-spacing: 0.02em;
-    color: var(--color-navy-blue);
+    color: var(--color-grey);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
@@ -332,7 +332,7 @@
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--color-slate);
+    color: var(--address-title-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
@@ -420,7 +420,7 @@
       }
       
       .doing-title {
-        color: var(--color-navy-blue);
+        color: var(--color-grey);
         margin-bottom: 72px;
       }
       
