--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ img{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    overflow: auto;
+    
     background-color: var(--main-title-color);
     position: static;
 }
